add third api server
